--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
     <div class="wrapper">
         <div class="chart__container"></div>
         <div class="copyright">
-            <h3>Made by <a href="https://github.com/AnthoVDO">AnthoVDO</a></h3>
+            <h3>Made by <a href="https://github.com/AnthoVDO" target="_blank">AnthoVDO</a></h3>
         </div>
     </div>
 
